--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -218,7 +218,7 @@ for (i in 1:ncol(num_df)){
 total_favstats <- cbind(names = columns, total_favstats)
 rownames(total_favstats) <- NULL
 
-knitr::kable(total_favstats)
+knitr::kable(total_favstats, digits=2)
 ```
 
 #### Numerical Summary II
@@ -229,7 +229,7 @@ num_sum <- insurance_data %>%
     avg_education_num = mean(education_num),
     avg_cap_gain = mean(cap_gain)
   )
-knitr::kable(summary(num_sum))
+knitr::kable(summary(num_sum), digits=2)
 ```
 
 
